--- a/_includes/js/item-js.html
+++ b/_includes/js/item-js.html
@@ -133,7 +133,7 @@ function displayItem(record, prev_id, next_id, compound_object) {
             {% endif %}
         }
         {%- endif -%}
-        itemLink += item.format.includes('compound_object') || item.format.includes('multiple') ? compoundDownload : itemDownload;
+        // itemLink += item.format.includes('compound_object') || item.format.includes('multiple') ? compoundDownload : itemDownload;
         itemLink += '</div>'
     };
 
